--- a/build.gradle
+++ b/build.gradle
@@ -16,15 +16,15 @@ plugins {
 apply plugin: 'org.spongepowered.mixin'
 
 group = 'com.vicious'
-version = '1.0.0'
+version = '1.0.2'
 
 String mcver = "1.19.2"
 String forgever = "43.1.1"
 String archivesBaseName = 'lifelosscore'
-String projectver = '1.0.1'
+String projectver = version
 String organization = 'vicious'
 String gitlink = "github.com/Vicious-MCModding/LifelossCore"
-String vcver = "3.2.4"
+String vcver = "3.2.6"
 
 java {
     archivesBaseName = 'lifelosscore'
