--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,16 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+projectver = 1.0.3
+
+mcver = 1.19.2
+forgever = 43.1.1
+
+vcver = 4.3.3
+coreprojectname = ViciousCore
+
+mainpackage = lifelosscore
+organization = vicious
+githubprojectname = LifelossCore
+
+viciousorglink = github.com/Vicious-MCModding
